# fm-index-lite

./: .gitignore  BENCHMARK.md  CMakeLists.txt  DESIGN-v2.md  DESIGN.md  NOTICE  README.md
bench/: bench_anchored.cpp  bench_blocksize.cpp  bench_build_memory.cpp  bench_fmindex.cpp  bench_gig.cpp  bench_mmap.cpp  corpus_gen.h  demo.cpp
src/index/fmindex/: BitVector.h  FMIndex.cpp  FMIndex.h  FMIndexInl.h  MmapFmIndex.h  QuadVector.h  SuffixArray.h  TokenFMIndex.h  WaveletMatrix.h  WaveletMatrix4.h
test/: simple_test.h  test_fmindex.cpp
